Hopefully fixed the json formatting issue

--- a/jsonExample.ipynb
+++ b/jsonExample.ipynb
@@ -2,30 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "3a78e852",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import bireader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c66b8c94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from bireader.biread_json import biread_json\n",
-    "\n",
-    "data = biread_json(\"/Users/franckdux/Documents/GitHub/4. Semester/BI/MP1/dat4bi-mp1/data/raid-signup.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "dd21f8ad",
    "metadata": {},
    "outputs": [
     {
@@ -652,14 +630,43 @@
        "31  579532029851336716   107474331805679616  primary  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "import pandas as pd\n",
+    "from bireader.biread_json import biread_json\n",
+    "\n",
+    "# Load the event (1 row with a 'signUps' column that holds a list of dicts)\n",
+    "event_df = biread_json(\"/Users/franckdux/Documents/GitHub/4. Semester/BI/MP1/dat4bi-mp1/data/raid-signup.json\")\n",
+    "\n",
+    "# Extract the actual list from the single cell\n",
+    "signups_list = event_df.at[0, \"signUps\"]   # same as: event_df[\"signUps\"].iloc[0]\n",
+    "\n",
+    "# Flatten list-of-dicts -> rows\n",
+    "signups_df = pd.json_normalize(signups_list)\n",
+    "\n",
+    "# Optional: reorder/select columns to match your desired table\n",
+    "cols = [\n",
+    "    \"entryTime\", \"specName\", \"name\", \"roleName\", \"roleEmoteId\",\n",
+    "    \"className\", \"specEmoteId\", \"id\", \"position\", \"classEmoteId\",\n",
+    "    \"userId\", \"status\"\n",
+    "]\n",
+    "signups_df = signups_df.reindex(columns=cols)\n",
+    "\n",
+    "# In a VS Code notebook, just put the variable on the last line to display:\n",
+    "signups_df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c66b8c94",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
