fing around with csv reading

--- a/usage-examples.ipynb
+++ b/usage-examples.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = \"https://raw.githubusercontent.com/TrainingByPackt/Data-Science-with-Python/refs/heads/master/Chapter01/Data/USA_Housing.csv\"\n",
-    "df = pd.read_csv(dataset, header = 0)"
+    "dataset = \"data/kontobevaegelser.csv\"\n",
+    "df = pd.read_csv(dataset, header = 0,encoding=\"latin1\", sep=\";\")"
    ]
   },
   {
@@ -30,8 +30,8 @@
     {
      "data": {
       "text/plain": [
-       "Index(['Avg. Area Income', 'Avg. Area House Age', 'Avg. Area Number of Rooms',\n",
-       "       'Avg. Area Number of Bedrooms', 'Area Population', 'Price', 'Address'],\n",
+       "Index(['Dato', 'Valør', 'Tekst', 'Unnamed: 3', 'Beløb', 'Saldo',\n",
+       "       'Egen bilagsreference'],\n",
        "      dtype='object')"
       ]
      },
