Refactor JSON example notebook for clarity and conciseness

--- a/jsonExample.ipynb
+++ b/jsonExample.ipynb
@@ -639,25 +639,16 @@
     "import pandas as pd\n",
     "from bireader.biread_json import biread_json\n",
     "\n",
-    "# Load the event (1 row with a 'signUps' column that holds a list of dicts)\n",
-    "event_df = biread_json(\"/Users/franckdux/Documents/GitHub/4. Semester/BI/MP1/dat4bi-mp1/data/raid-signup.json\")\n",
+    "# Load the event JSON into a DataFrame (1 row with 'signUps' as a list)\n",
+    "event_df = biread_json(\"data/raid-signup.json\")\n",
     "\n",
-    "# Extract the actual list from the single cell\n",
-    "signups_list = event_df.at[0, \"signUps\"]   # same as: event_df[\"signUps\"].iloc[0]\n",
+    "# Extract the list of signups\n",
+    "signups_list = event_df.at[0, \"signUps\"]\n",
     "\n",
-    "# Flatten list-of-dicts -> rows\n",
+    "# Flatten without manually naming columns\n",
     "signups_df = pd.json_normalize(signups_list)\n",
     "\n",
-    "# Optional: reorder/select columns to match your desired table\n",
-    "cols = [\n",
-    "    \"entryTime\", \"specName\", \"name\", \"roleName\", \"roleEmoteId\",\n",
-    "    \"className\", \"specEmoteId\", \"id\", \"position\", \"classEmoteId\",\n",
-    "    \"userId\", \"status\"\n",
-    "]\n",
-    "signups_df = signups_df.reindex(columns=cols)\n",
-    "\n",
-    "# In a VS Code notebook, just put the variable on the last line to display:\n",
-    "signups_df\n"
+    "signups_df  # displays the table in your notebook\n"
    ]
   },
   {
